--- a/port_inspector/port_inspector_app/templates/history.html
+++ b/port_inspector/port_inspector_app/templates/history.html
@@ -128,7 +128,12 @@
         <a href="/history" class="icon">📜<span>History</span></a>
         <a href="/upload" class="icon">📤<span>Upload Photo</span></a>
         <a href="/logout" class="icon">👤<span>Profile</span></a>
+        {% if not request.user.is_authenticated %}
+        <a href="/login" class="icon">🔒<span>Login</span></a>
+        {% endif %}
+        {% if request.user.is_authenticated %}
         <a href="/logout" class="icon">🔓<span>Logout</span></a>
+        {% endif %}
     </header>
     <div class="container">
         <h1>History</h1>
