Modify history view function to only list history of the specific user

--- a/port_inspector/port_inspector_app/templates/history.html
+++ b/port_inspector/port_inspector_app/templates/history.html
@@ -150,7 +150,7 @@
                 <tr>
                     <td>{{ image.uploaded_at.date }}</td>
                     <td>{{ image.uploaded_at.time }}</td>
-                    <td><a href="#" class="view-link" onclick="openModal('{{ MEDIA_URL }}{{ image.image }}')">view</a></td>
+                    <td><a class="view-link" onclick="openModal('{{ MEDIA_URL }}{{ image.image }}')">view</a></td>
                 </tr>
                 {% endfor %}
             </tbody>
