Modify pages to display confirmed species, fixed history html

--- a/port_inspector/port_inspector_app/templates/history.html
+++ b/port_inspector/port_inspector_app/templates/history.html
@@ -153,10 +153,10 @@
                 {% for upload in uploads %}
                 <tr>
                     <td><a href="{% url 'results' upload.1 %}" target="_blank">{{ upload.0.id }}</a></td>
-                    <td>{{ upload.upload_date.date|default:"No date" }}</td>
-                    <td>{{ upload.upload_date.time|default:"No time" }}</td>
+                    <td>{{ upload.0.upload_date.date|default:"No date" }}</td>
+                    <td>{{ upload.0.upload_date.time|default:"No time" }}</td>
                     <td>
-                        {% if upload.frontal_image and upload.frontal_image.image %}
+                        {% if upload.0.frontal_image and upload.0.frontal_image.image %}
                             <a class="view-link" onclick="openModal('{{ MEDIA_URL }}{{ upload.0.frontal_image.image }}')">Frontal</a>
                         {% else %}
                             No image
@@ -164,7 +164,7 @@
                     </td>
                 
                     <td>
-                        {% if upload.dorsal_image and upload.dorsal_image.image %}
+                        {% if upload.0.dorsal_image and upload.0.dorsal_image.image %}
                             <a class="view-link" onclick="openModal('{{ MEDIA_URL }}{{ upload.0.dorsal_image.image }}')">Dorsal</a>
                         {% else %}
                             No image
@@ -172,7 +172,7 @@
                     </td>
                 
                     <td>
-                        {% if upload.caudal_image and upload.caudal_image.image %}
+                        {% if upload.0.caudal_image and upload.0.caudal_image.image %}
                             <a class="view-link" onclick="openModal('{{ MEDIA_URL }}{{ upload.0.caudal_image.image }}')">Caudal</a>
                         {% else %}
                             No image
@@ -180,7 +180,7 @@
                     </td>
                 
                     <td>
-                        {% if upload.lateral_image and upload.lateral_image.image %}
+                        {% if upload.0.lateral_image and upload.0.lateral_image.image %}
                             <a class="view-link" onclick="openModal('{{ MEDIA_URL }}{{ upload.0.lateral_image.image }}')">Lateral</a>
                         {% else %}
                             No image
