--- a/port_inspector/port_inspector_app/templates/results.html
+++ b/port_inspector/port_inspector_app/templates/results.html
@@ -165,6 +165,7 @@
     <div class="results-section">
       <h1>Upload #23456</h1>
       <p><strong>Likely Species:</strong> <span id="likely-species">{{ likely_species }}</span></p>
+      <p><strong>Confirmed Species:</strong> <span id="likely-species">{{ confirmed_species | default:" Not Confirmed"}}</span></p>
 
       <table>
         <tr>
