--- a/port_inspector/port_inspector_app/templates/results.html
+++ b/port_inspector/port_inspector_app/templates/results.html
@@ -178,7 +178,7 @@
           <tr>
             <td><strong>Genus:</strong> {{ species_results.0.species_name }}</td>
             <td class="{% if species_results.0.confidence_level >= 50 %}confidence-high{% elif species_results.0.confidence_level >= 20 %}confidence-medium{% else %}confidence-low{% endif %}">
-              {{ species_results.0.confidence_level }}%
+              {{ species_results.0.confidence_level | floatformat:"2" }}%
             </td>
             <td><a href="{{ species_results.0.resource_link }}" target="_blank">more here</a></td>
           </tr>
@@ -189,7 +189,7 @@
         <tr>
           <td><strong>Species {{ forloop.counter }}:</strong> {{ species.species_name }}</td>
           <td class="{% if species.confidence_level >= 50 %}confidence-high{% elif species.confidence_level >= 20 %}confidence-medium{% else %}confidence-low{% endif %}">
-            {{ species.confidence_level }}%
+            {{ species.confidence_level | floatformat:"2" }}%
           </td>
           <td><a href="{{ species.resource_link }}" target="_blank">more here</a></td>
         </tr>
